--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
 
   <!-- ======= Portfolio Section ======= -->
   <div id="portfoliosection">
-  <section id="ecs" class="d-flex flex-column justify-content-center">
-    <div class="container" data-aos="fade-up" data-aos-delay="100">
-      <h1>Entity-Component-System</h1>
-      <p>Data-oriented handling of objects in the game world</p>
-      <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><button class="btn btn-outline-primary btn-lg">Read my article</button></a>
-    </div>
-  </section>
-  <section id="editor" class="d-flex flex-column justify-content-center">
-    <div class="container" data-aos="fade-up" data-aos-delay="100">
-      <h1>Editor</h1>
-      <p>Engine level editor, made using <i>Dear ImGui</i>, with multi-user support</p>
-      <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><button class="btn btn-outline-primary btn-lg">Read my article</button></a>
-    </div>
-  </section><!-- Portfolio End -->
+    <section id="editor" class="d-flex flex-column justify-content-center">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <h1>Editor</h1>
+        <p>Engine level editor, made using <i>Dear ImGui</i>, with multi-user support</p>
+        <a href="editor.html" class="portfolio-details-lightbox2" data-glightbox="type: external" title="Portfolio Details"><button class="btn btn-outline-primary btn-lg">Read my article</button></a>
+      </div>
+    </section><!-- Portfolio End -->
+    <section id="ecs" class="d-flex flex-column justify-content-center">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <h1>Entity-Component-System</h1>
+        <p>Data-oriented handling of objects in the game world</p>
+        <a href="ecs.html" class="portfolio-details-lightbox1" data-glightbox="type: external" title="Portfolio Details"><button class="btn btn-outline-primary btn-lg">Read my article</button></a>
+      </div>
+    </section>
 </div>
 
 <div id="games">
@@ -150,7 +150,7 @@
           </tr>
           <tr class="td-with-background2">
             <td rowspan="2" class="toysrsus-video-desktop"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
-              <source src="assets/img/web-bg.mp4" type="video/mp4">
+              <source src="assets/img/loagameplay.mp4" type="video/mp4">
             </video></td>
             <td><p>Details:</p>
             <ul>
@@ -171,7 +171,7 @@
           </tr>
           <tr class="toysrsus-video-mobile td-with-background2">
             <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
-              <source src="assets/img/web-bg.mp4" type="video/mp4">
+              <source src="assets/img/loagameplay.mp4" type="video/mp4">
             </video></td>
           </tr>
           <!-- The Warden -->
@@ -186,8 +186,8 @@
               <li>8 week development (20h/week) with a team of 5 programmers, 2 level designers and 4 artists</li>
               <li>Made in TGA2D, the school's in-house C++ rendering framework</li>
             </ul></td>
-            <td rowspan="2" class="toysrsus-video-desktop video-right"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
-              <source src="assets/img/web-bg.mp4" type="video/mp4">
+            <td rowspan="2" class="toysrsus-video-desktop video-right"><video class="toysrsus-video" controls poster="assets/img/wardenthumbnail.png">
+              <source src="assets/img/warden.mp4" type="video/mp4">
             </video></td>
           </tr>
           <tr>
@@ -202,8 +202,8 @@
           </td>
           </tr>
           <tr class="toysrsus-video-mobile ">
-            <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
-              <source src="assets/img/web-bg.mp4" type="video/mp4">
+            <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/wardenthumbnail.png">
+              <source src="assets/img/warden.mp4" type="video/mp4">
             </video></td>
           </tr>
           <!-- Stakeout -->
@@ -212,8 +212,8 @@
             <th><h3 style="padding-top: 10px; color: #EDB518;">Stakeout</h3></th>
           </tr>
           <tr class="">
-            <td rowspan="2" class="toysrsus-video-desktop"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
-              <source src="assets/img/web-bg.mp4" type="video/mp4">
+            <td rowspan="2" class="toysrsus-video-desktop"><video class="toysrsus-video" controls poster="assets/img/stakeoutthumbnail.png">
+              <source src="assets/img/stakeoutgameplay.mp4" type="video/mp4">
             </video></td>
             <td><p>Details:</p>
             <ul>
@@ -233,8 +233,8 @@
           </td>
           </tr>
           <tr class="toysrsus-video-mobile ">
-            <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
-              <source src="assets/img/web-bg.mp4" type="video/mp4">
+            <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/stakeoutthumbnail.png">
+              <source src="assets/img/stakeoutgameplay.mp4" type="video/mp4">
             </video></td>
           </tr>
           <!-- Distortion -->
@@ -245,12 +245,12 @@
           <tr class="">
             <td><p>Details:</p>
             <ul>
-              <li>Action RPG game, inspired by <i>Hyper Light Drifter</i></li>
+              <li>Action RPG game</li>
               <li>8 week development (20h/week) with a team of 5 programmers, 3 level designers and 4 artists</li>
               <li>Made in TGA2D, the school's in-house C++ rendering framework</li>
             </ul></td>
-            <td rowspan="2" class="toysrsus-video-desktop video-right"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
-              <source src="assets/img/web-bg.mp4" type="video/mp4">
+            <td rowspan="2" class="toysrsus-video-desktop video-right"><video class="toysrsus-video" controls poster="assets/img/distthumb.png">
+              <source src="assets/img/distortion.mp4" type="video/mp4">
             </video></td>
           </tr>
           <tr>
@@ -266,8 +266,8 @@
           </td>
           </tr>
           <tr class="toysrsus-video-mobile ">
-            <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/Poster.PNG">
-              <source src="assets/img/web-bg.mp4" type="video/mp4">
+            <td rowspan="2"><video class="toysrsus-video" controls poster="assets/img/distthumb.png">
+              <source src="assets/img/distortion.mp4" type="video/mp4">
             </video></td>
           </tr>
       </table>
@@ -297,7 +297,7 @@
             <br><br>
             <span id="pdf-links" style="color: #EDB518;">
             <i class="bi bi-file-earmark-person"></i> CV: 
-            <a href="pdf.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details">
+            <a href="pdf.html" class="portfolio-details-lightbox3" data-glightbox="type: external" title="Portfolio Details">
               Preview</a> - 
             <a href="assets/img/Test.pdf" download>Download</a>
             <br><br></span>
