Editor article first draft

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <table class="table table-borderless">
         <!-- Toys R Sus -->
           <tr>
-            <th><h3 style="color: #EDB518;">Toys "R" Sus</h3></th>
+            <th><h3 style="color: #EDB518;">Toys or Sus</h3></th>
           </tr>
           <tr class="td-with-background1">
             <td class=""><p>Details:</p>
