--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <i class="bi bi-file-earmark-person"></i> CV: 
             <a href="pdf.html" class="portfolio-details-lightbox3" data-glightbox="type: external" title="Portfolio Details">
               Preview</a> - 
-            <a href="assets/img/Test.pdf" download>Download</a>
+            <a href="assets/img/CV.pdf" download>Download</a>
             <br><br></span>
           </p></td>
             <td style="text-align: center;" class="desktop-only"><img id="portrait" src="assets/img/portrait.jpg" alt="My portrait"></td>
