--- a/editor.html
+++ b/editor.html
@@ -187,7 +187,7 @@ COMPONENT_LIST(
         </video>
 
         <footer>
-          * In accordance with the C standard 6.7.2.1, which specifies that a pointer to a struct shall point to its first member and that all members will appear in memory in the same order they are declared in. Therefore, should not constitute undefined behavior, as far as I'm aware.
+          * In accordance with the C standard 6.7.2.1, it is possible to index members of a C struct from a pointer to that struct.
         </footer>
       </div>  
     </section>
