--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Elia Rönning - Game Programmer</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Game programming student with a particular interest in engine & tools. This is a showcase of my work." name="description">
+  <meta content="game development, C++, game programmer, intern, game engine, tools development" name="keywords">
+  <meta content="Elia Rönning" name="author">
+
+  <meta property="og:title" content="Elia Rönning - Game Programmer" />
+  <meta property="og:description" content="Game programming student with a particular interest in engine & tools. This is a showcase of my work." />
+  <meta property="og:url" content="https://eliar.dev/" />
+  <meta property="og:image" content="assets/img/OG.png" />
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -315,7 +321,8 @@
       <p>
         <br><a href="tel:+46736468868"><i class="bi bi-telephone-fill"></i><br>+46 73 646 8868</a><br>
         <br><a href="mailto:ronning.elia01@gmail.com"><i class="bi bi-envelope-fill"></i><br>ronning.elia01@gmail.com</a><br>
-        <br><a href="https://www.linkedin.com/in/elia-r%C3%B6nning-6804a2221/"><i class="bi bi-linkedin"></i><br>Elia Rönning</a><br>
+        <br><a href="https://www.linkedin.com/in/elia-r%C3%B6nning-6804a2221/" target="_blank"><i class="bi bi-linkedin"></i><br>Elia Rönning</a><br>
+        <br><a href="https://github.com/GesturTheViking" target="_blank"><i class="bi bi-github"></i><br>GesturTheViking</a><br>
       </p>
     </div>
   </section>
@@ -327,8 +334,8 @@
       <h3>Elia Rönning</h3>
       <p>Game Programmer</p>
       <div class="social-links">
-        <a href="https://github.com/GesturTheViking" class="github"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/in/elia-r%C3%B6nning-6804a2221/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/GesturTheViking" class="github" target="_blank"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/elia-r%C3%B6nning-6804a2221/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
