--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Elia Rönning - Game Programmer" />
   <meta property="og:description" content="Game programming student with a particular interest in engine & tools. This is a showcase of my work." />
   <meta property="og:url" content="https://eliar.dev/" />
-  <meta property="og:image" content="assets/img/OG.png" />
+  <meta property="og:image" content="https://eliar.dev/assets/img/OG.png" />
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
