--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <meta property="og:description" content="Game programming student with a particular interest in engine & tools. This is a showcase of my work." />
   <meta property="og:url" content="https://eliar.dev/" />
   <meta property="og:image" content="https://eliar.dev/assets/img/OG.jpg" />
+  <meta property="twitter:image" content="https://eliar.dev/assets/img/OG.jpg" />
   <meta property="og:image:secure_url" content="https://eliar.dev/assets/img/OG.jpg" />
+  <meta property="og:image:url" content="https://eliar.dev/assets/img/OG.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
-  <meta property="og:image:width" content="1080" />
-  <meta property="og:image:height" content="600" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:image:alt" content="Elia Rönning Game Programmer Portfolio" />
 
   <!-- Favicons -->
