--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
   <meta content="Elia Rönning" name="author">
 
   <meta property="og:title" content="Elia Rönning - Game Programmer" />
+  <meta property="twitter:title" content="Elia Rönning - Game Programmer" />
   <meta property="og:description" content="Game programming student with a particular interest in engine & tools. This is a showcase of my work." />
+  <meta property="twitter:description" content="Game programming student with a particular interest in engine & tools. This is a showcase of my work." />
+  <meta content="website" property="og:type">
   <meta property="og:url" content="https://eliar.dev/" />
+  <meta property="twitter:url" content="https://eliar.dev/" />
   <meta property="og:image" content="https://eliar.dev/assets/img/OG.jpg" />
   <meta property="twitter:image" content="https://eliar.dev/assets/img/OG.jpg" />
   <meta property="og:image:secure_url" content="https://eliar.dev/assets/img/OG.jpg" />
@@ -21,6 +25,8 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:alt" content="Elia Rönning Game Programmer Portfolio" />
+  <meta content="summary_large_image" name="twitter:card">
+  <meta content="eliar.dev" property="twitter:domain">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
