--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <meta property="og:title" content="Elia Rönning - Game Programmer" />
   <meta property="twitter:title" content="Elia Rönning - Game Programmer" />
-  <meta property="og:description" content="Game programming student with a particular interest in engine & tools. This is a showcase of my work." />
-  <meta property="twitter:description" content="Game programming student with a particular interest in engine & tools. This is a showcase of my work." />
+  <meta property="og:description" content="Multi-user level editor, entity-component-system, and more..." />
+  <meta property="twitter:description" content="Multi-user level editor, entity-component-system, and more..." />
   <meta content="website" property="og:type">
   <meta property="og:url" content="https://eliar.dev/" />
   <meta property="twitter:url" content="https://eliar.dev/" />
