--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Elia Rönning - Game Programmer</title>
-  <meta content="Game programming student with a particular interest in engine & tools. This is a showcase of my work." name="description">
-  <meta content="game development, C++, game programmer, intern, game engine, tools development" name="keywords">
+  <meta content="Multi-user level editor, entity-component-system, and more..." name="description">
+  <meta content="game development, C++, game programmer, intern, game engine, tools development, multi-user editor, level editor, entity-component-system" name="keywords">
   <meta content="Elia Rönning" name="author">
 
   <meta property="og:title" content="Elia Rönning - Game Programmer" />
